# gpx_export_pi

./: .gitignore  CMakeLists.txt  Plugin.cmake  README.md  appveyor.yml  metadata.xml.in
buildwin/: win_deps.bat
ci/: appveyor.bat
cmake/: TemplateVersion
flatpak/: org.opencpn.OpenCPN.Plugin.gpx_export_pi.yaml
src/: export_dlg.cpp  export_dlg.h  export_model.h  gpx_export_pi.cpp  gpx_export_pi.h  gpx_preset.cpp  gpx_preset.h  gpx_writer.cpp  gpx_writer.h  name_policy.cpp  name_policy.h  xml_util.cpp  xml_util.h
